# HamSampler

./: Makefile  Makefile.in  README.md  config.status  configure  configure.ac  input.in  output.out  spectrum.out
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  PF.c  PF.h  fold.c  fold.h  gfold.c  gfold.h  head.h  main.c  pfunc.c  pfunc.h  simc.c  simc.h  stat.c  stat.h  utils.c  utils.h
src/.deps/: PF.Po  energy_par.Po  fold.Po  fold_vars.Po  main.Po  params.Po  pfunc.Po  simc.Po  stat.Po  utils.Po
